Creación de template base HTML y aplicación al resto de plantillas. Gestión de rutas y archivo urls.py desde la app gestion.

--- a/gestion/templates/index.html
+++ b/gestion/templates/index.html
@@ -1,27 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio Almacen | Django Pruebas</title>
-  </head>
-  <body>
-    <main>
-      <h1>Hola Álvaro! Estas en la página de inicio del Almacén.</h1>
-      <h1>Lista de productos:</h1>
-      {# Esto sería un comentario en mi código, el cual no queda impreso #}
-      <div class="my_product_list">
-        <ul>
-          {%for product in products%}
-          <li>
-            <h4>{{product.name}}</h4>
-            <h4>{{product.price}}</h4>
-            <p>{{product.description}}</p>
-          </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </main>
-  </body>
-</html>
+{% extends "base_generic.html" %} 
+{% block title %}Mi título aquí{% endblock title %} 
+
+{% block my_index %}
+<main>
+  {# Esto sería un comentario en mi código, el cual no queda impreso #}
+  <div class="my_product_list container bg-dark text-light p-4">
+    <h1 class="border-top border-white">Lista de productos:</h1>
+    <ul class="list-group list-unstyled">
+      {%for product in products%}
+      <li class="list-item p-4 my-2 border border-light rounded">
+        <h4 class="fw-light">{{product.name}} | {{product.id}}</h4>
+        <h5 class="fw-lighter text-info">{{product.price}}€</h5>
+        <p>{{product.description}}</p>
+        <a href="{% url 'gestion:show_details' product.id %}" class="my-2">Ver detalles del producto</a>
+      </li>
+      {% endfor %}
+    </ul>
+
+    {% comment %} PAGINADOR {% endcomment %}
+    <nav class="fs-4">
+      {% if products.has_previous %}
+      <a
+        href="?page={{products.previous_page_number}}"
+        class="text-light link-underline link-underline-opacity-0"
+        >Prev</a
+      >
+      {% endif %} {% for i in products.paginator.page_range %}
+      <a
+        href="?page={{i}}"
+        class="text-light link-underline link-underline-opacity-0"
+        >{{i}}</a
+      >
+
+      {% endfor %} {% if products.has_next %}
+      <a
+        href="?page={{products.next_page_number}}"
+        class="text-light link-underline link-underline-opacity-0"
+        >Next</a
+      >
+      {% endif %}
+    </nav>
+  </div>
+</main>
+{% endblock %}
