finalización del CRUD en Django: post, update y delete desde un formulario sencillo.

--- a/gestion/templates/base_generic.html
+++ b/gestion/templates/base_generic.html
@@ -21,5 +21,6 @@
   <body>
     {% block my_index %} {% endblock %}
     {% block details %} {% endblock %}
+    {% block new_product_form %} {% endblock %}
   </body>
 </html>
